--- a/desafios/d010/index.html
+++ b/desafios/d010/index.html
@@ -85,7 +85,7 @@
     </main>
 
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara/" rel="external" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo" rel="external" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://github.com/mo-farelo" rel="external" target="_blank">Marcelo Farelo</a></p>
     </footer>
     
 </body>
